k8s/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: vote
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
        - name: frontend
          image: pskclub/t6601-frontend:latest
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 300
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 30
            failureThreshold: 5
          ports:
            - name: frontend
              containerPort: 3000
