k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: vote
spec:
  ports:
    - port: 80
      name: "frontend80"
      targetPort: 3000
      protocol: TCP
  selector:
    name: frontend
