k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: vote
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: vote.mhalong.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
